Alignment Issue fixation
Alignment Issue fixation

--- a/src/components/InviteOrganization/InviteOrganization.Component.css
+++ b/src/components/InviteOrganization/InviteOrganization.Component.css
@@ -1,5 +1,5 @@
 .io__main__div {
-    padding: 20px;
+    padding: 20px !important;
 }
 
 .io__title__text {
@@ -43,15 +43,11 @@
     flex-grow: 0;
     margin: 8px 0px;
 }
-.od__text__box input[type=number]::-webkit-inner-spin-button,
-           input[type=number]::-webkit-outer-spin-button { 
-	-webkit-appearance: none;
-}
 
 .io__row {
     width: 100%;
-    margin-top: 12px;
-    margin-bottom: 8px;
+    margin-top: 8px!important;
+    margin-bottom: 8px!important;
 }
 
 .io__add__organization__btn {
@@ -118,7 +114,7 @@
 }
 
 .io__invite__org__btn {
-    right: 50px;
+    right: 70px !important;
     display: flex;
 }
 
